--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
     "email": "jonas.enge@t-fk.no",
     "url": "https://github.com/telemark"
   },
+  "contributors": [
+    {
+      "name": "Geir Gåsodden",
+      "email": "geir.gasodden@pythonia.no",
+      "url": "https://github.com/zrrrzzt"
+    }
+  ],
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
